network-policy/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
